--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,17 +24,20 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   routemaster: ^0.9.5
   hive: ^2.0.4
+  hive_flutter: ^1.1.0
   http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
+  hive_generator: ^1.1.1
+  build_runner: ^2.1.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
